--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ code/unified_approach/preprocessing_and_training/.DS_Store
 code/unified_approach/preprocessing_and_training/bart-large/.DS_Store
 code/unified_approach/preprocessing_and_training/pipeline_webpage_extractor/.DS_Store
 data/.DS_Store
+code/unified_approach/evaluation/.DS_Store
+code/unified_approach/preprocessing_and_training/bart-base/.DS_Store
